--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
 	<properties>
 		<java.version>11</java.version>
 		<springdoc-openapi-ui.version>1.6.6</springdoc-openapi-ui.version>
+		<flyway-maven-plugin.user>postgres</flyway-maven-plugin.user>
+		<flyway-maven-plugin.password>docker</flyway-maven-plugin.password>
+		<flyway-maven-plugin.url>jdbc:postgresql://localhost:5432/postgres</flyway-maven-plugin.url>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -46,6 +49,10 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -60,6 +67,19 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-maven-plugin</artifactId>
+				<configuration>
+					<url>${flyway-maven-plugin.url}</url>
+					<driver>org.postgresql.Driver</driver>
+					<user>${flyway-maven-plugin.user}</user>
+					<password>${flyway-maven-plugin.password}</password>
+					<schemas>
+						<schema>test2</schema>
+					</schemas>
 				</configuration>
 			</plugin>
 		</plugins>
